--- a/Calculator/src/App.css
+++ b/Calculator/src/App.css
@@ -1,42 +1,140 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+    background-color: aqua;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+@media (min-width: 375px) and (max-width: 420px) {
+    .Container {
+        max-width: 100%;
+        margin: 25px auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: lightcoral;
+    }
+
+    input {
+        width: 100%;
+        text-align: right;
+        font-size: 4em;
+        font-weight: 400;
+        margin-bottom: 10px;
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+        border: 1px solid #ccc;
+        background-color: #fff;
+    }
+
+    button {
+        width: 30%;
+        height: 60px;
+        margin: 5px;
+        font-size: 1.5em;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.2s, box-shadow 0.2s;
+    }
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+@media (min-width: 400px) and (max-width: 420px) {
+    .Container {
+        max-width: 100%;
+        margin: 30px auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: lightcoral;
+    }
+    h1 {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 40px;
+    }
+
+    input {
+        width: 100%;
+        text-align: right;
+        font-size: 4em;
+        font-weight: 400;
+        margin-bottom: 30px;
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+        border: 1px solid #ccc;
+        background-color: #fff;
+    }
+
+    button {
+        width: 30%;
+        height: 70px;
+        margin: 5px;
+        font-size: 2.5em;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.2s, box-shadow 0.2s;
+    }
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+@media (min-width: 1600px) and (max-width: 1919px) {
+    .Container {
+        max-width: 50%;
+        margin: 110px auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: lightcoral;
+    }
+
+    input {
+        width: 100%;
+        text-align: right;
+        font-size: 2em;
+        font-weight: 400;
+        margin-bottom: 10px;
+        box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+        border: 1px solid #ccc;
+        background-color: #fff;
+    }
+
+    button {
+        width: 20%;
+        height: 35px;
+        margin: 5px;
+        font-size: 1.5em;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.2s, box-shadow 0.2s;
+    }
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Container {
+    max-width: 50%;
+    margin: 110px auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: lightcoral;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+input {
+    width: 100%;
+    text-align: right;
+    font-size: 2em;
+    font-weight: 400;
+    margin-bottom: 10px;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
+    background-color: #fff;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+button {
+    width: 20%;
+    height: 35px;
+    margin: 5px;
+    font-size: 1.5em;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.2s, box-shadow 0.2s;
 }
