--- a/Calculator/src/App.css
+++ b/Calculator/src/App.css
@@ -115,6 +115,9 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: lightcoral;
 }
+h1 {
+    text-align: center;
+}
 
 input {
     width: 100%;
